[package]
name = "fhe_svm"
version = "0.1.0"
edition = "2024"
description = "A library for integrating Fully Homomorphic Encryption (FHE) into the Sonana virtual machine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fhe_svm"
homepage = "https://github.com/yourusername/fhe_svm"
documentation = "https://docs.rs/fhe_svm"
readme = "README.md"
keywords = ["fhe", "svm", "privacy", "Solana"]
categories = ["cryptography", "security"]

[dependencies]
