[package]
name = "fhe_svm"
version = "0.1.1"
edition = "2024"
description = "A library for integrating Fully Homomorphic Encryption (FHE) into the Sonana virtual machine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kkoshiya/fhe_svm"
homepage = "https://github.com/kkoshiya/fhe_svm"
documentation = "https://github.com/kkoshiya/fhe_svm/blob/main/README.md"
readme = "README.md"
keywords = ["fhe", "svm", "privacy", "Solana"]
categories = ["cryptography", "security"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
proc-macro2 = "=1.0.67"